# rosetta-nii

./: .gitignore  Cargo.toml  Makefile  build.gradle  cpu-info.pl  go.mod  go.sum  jvm.md  main.go  niimean.f90  niimean.jl  niimean.js  niimean.m  plot.R  readme.md  setup.bash  stats.csv  versions.bash  voxcor.py
niimean/: main.go
patch/: Niftigz.pm
scripts/: niimean.R  niimean.jl  niimean.js  niimean.m  niimean.pl  niimean.py  voxcor.R  voxcor.jl  voxcor.m  voxcor.pl  voxcor.py
src/: main.rs  mean.rs
src/main/java/niimean/: NiftiMean.java
t/: test_niimean.bats  test_voxcor.bats
util/: util.go
within-env/: bench.R  bench.jl
