[package]
name = "voxcor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
nalgebra = "0.32.3"
ndarray = "0.15.6"
nifti = "0.16.0"

[[bin]]
name = "niimean"
path = "src/mean.rs"

[[bin]]
name = "voxcor"
path = "src/main.rs"
